# compress-kit

./: .clang-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTEXT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  go.work  package-lock.json
.archive/: INDEX.md
.archive/superpowers-20260508/specs/: 2026-05-08-architecture-deepening-design.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md
.github/workflows/: ci-docs.yml  ci.yml  codeql.yml  docs-pages.yml  pages.yml
algorithms/arithmetic/benchmark/: bench.py
algorithms/arithmetic/cpp/: main.cpp
algorithms/arithmetic/go/: arithmetic.go  arithmetic_test.go  streaming.go  streaming_test.go
algorithms/arithmetic/rust/: Cargo.toml  main.rs
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts  config.ts
docs/academy/: huffman.md  index.md
docs/adr/: 0001-validation-metadata-module-shape.md  0002-semantic-error-alignment-across-languages.md  0003-range-coder-corpus-cap-policy.md  0004-rle-buffered-streaming-stance.md  0005-range-cpp-bench-mode-migration-path.md
docs/algorithms/: arithmetic.md  huffman.md  range.md  rle.md
docs/api/: cpp.md
docs/architecture/: contract-inventory.md
docs/benchmarks/: how-to-run.md  results.md
docs/en/: index.md
docs/guide/: algorithms.md  architecture.md  getting-started.md
docs/release-notes/: changelog.md
docs/scripts/: sync-changelog.mjs
docs/tests/: site-content.test.mjs
docs/zh/: index.md
specs/api/: README.md
specs/db/: README.md
tests/: gen_testdata.py  metadata.py
tests/conformance/: run_cli_smoke.py  run_decode_matrix.py
tests/streaming_api_contract/: contract_cases.md
(+120 files in other folders)
